Updated to build with .NET core 8.0

--- a/CSCore.Ffmpeg/CSCore.Ffmpeg.csproj
+++ b/CSCore.Ffmpeg/CSCore.Ffmpeg.csproj
@@ -1,113 +1,61 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F4E6168A-B2CB-413C-AE0E-0D8B856B425E}</ProjectGuid>
+    <TargetFramework>net8.0</TargetFramework>
     <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CSCore.Ffmpeg</RootNamespace>
-    <AssemblyName>CSCore.Ffmpeg</AssemblyName>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <AssemblyTitle>CSCore.Ffmpeg</AssemblyTitle>
+    <Description>.NET Sound Library - FFmpeg Wrapper</Description>
+    <Product>CSCore.Ffmpeg</Product>
+    <Copyright>Florian R.</Copyright>
+    <AssemblyVersion>1.0.0.0</AssemblyVersion>
+    <FileVersion>1.0.0.0</FileVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <DocumentationFile>bin\Release\CSCore.Ffmpeg.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.configuration" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="AvFormatContext.cs" />
-    <Compile Include="AvFrame.cs" />
-    <Compile Include="AvioBuffer.cs" />
-    <Compile Include="AvioContext.cs" />
-    <Compile Include="AvStream.cs" />
-    <Compile Include="FfmpegCalls.cs" />
-    <Compile Include="FfmpegConfigurationSection.cs" />
-    <Compile Include="FfmpegDecoder.cs" />
-    <Compile Include="FfmpegException.cs" />
-    <Compile Include="FfmpegLogReceivedEventArgs.cs" />
-    <Compile Include="FfmpegStream.cs" />
-    <Compile Include="FfmpegUtils.cs" />
-    <Compile Include="AvCodecId.cs" />
-    <Compile Include="Format.cs" />
-    <Compile Include="Interops\ConstCharPtrMarshaler.cs" />
-    <Compile Include="Interops\FFmpeg.avcodec.g.cs" />
-    <Compile Include="ResolveFfmpegAssemblyLocationEventArgs.cs" />
     <None Include="Interops\unused\FFmpeg.avdevice.g.cs" />
     <None Include="Interops\unused\FFmpeg.avfilter.g.cs" />
-    <Compile Include="Interops\FFmpeg.avformat.g.cs" />
-    <Compile Include="Interops\FFmpeg.avutil.g.cs" />
-    <Compile Include="Interops\ffmpeg.extend.cs" />
     <None Include="Interops\unused\FFmpeg.postprocess.g.cs" />
-    <Compile Include="Interops\FFmpeg.swresample.g.cs" />
     <None Include="Interops\unused\FFmpeg.swscale.g.cs" />
-    <Compile Include="Interops\InteropHelper.cs" />
-    <Compile Include="Interops\Unresolved.cs" />
-    <Compile Include="LogLevel.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\CSCore\CSCore.csproj">
-      <Project>{c3dccfe3-dd3f-4eee-849b-33e355b1e064}</Project>
-      <Name>CSCore</Name>
-    </ProjectReference>
+    <ProjectReference Include="..\CSCore\CSCore.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="FFmpeg\bin\unix\x64\libavcodec.so.57">
+    <None Update="FFmpeg\bin\unix\x64\libavcodec.so.57">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="FFmpeg\bin\unix\x64\libavformat.so.57">
+    <None Update="FFmpeg\bin\unix\x64\libavformat.so.57">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="FFmpeg\bin\unix\x64\libavutil.so.55">
+    <None Update="FFmpeg\bin\unix\x64\libavutil.so.55">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="FFmpeg\bin\unix\x64\libswresample.so.2">
+    <None Update="FFmpeg\bin\unix\x64\libswresample.so.2">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="FFmpeg\bin\unix\x86\libavcodec.so.57">
+    <None Update="FFmpeg\bin\unix\x86\libavcodec.so.57">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="FFmpeg\bin\unix\x86\libavformat.so.57">
+    <None Update="FFmpeg\bin\unix\x86\libavformat.so.57">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="FFmpeg\bin\unix\x86\libavutil.so.55">
+    <None Update="FFmpeg\bin\unix\x86\libavutil.so.55">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="FFmpeg\bin\unix\x86\libswresample.so.2">
+    <None Update="FFmpeg\bin\unix\x86\libswresample.so.2">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="Interops\Readme.md" />
-    <None Include="License.md" />
-    <None Include="Readme.md" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="8.0.0" />
+  </ItemGroup>
   <ItemGroup>
     <Content Include="FFmpeg\bin\windows\x64\avcodec-57.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -135,12 +83,10 @@
     </Content>
     <Content Include="Interops\unused\Readme.txt" />
   </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+  <ItemGroup>
+    <Compile Remove="Interops\unused\FFmpeg.avdevice.g.cs" />
+    <Compile Remove="Interops\unused\FFmpeg.avfilter.g.cs" />
+    <Compile Remove="Interops\unused\FFmpeg.postprocess.g.cs" />
+    <Compile Remove="Interops\unused\FFmpeg.swscale.g.cs" />
+  </ItemGroup>
 </Project>
