Builds with .NET8.  Basic audio player test works. has not been fully tested.
The codebase uses a hacky post-processing step inherited for the framework 4.5 days that I have hacked further. It *seems* to be working but is somewhat fragile and thre are probably better ways to do it in modern .NET

This should be considered an experimental build. If the old Framework 4.5 is adaqaute for your needs I recommend staying with that.

--- a/CSCore/CSCore.csproj
+++ b/CSCore/CSCore.csproj
@@ -31,7 +31,7 @@
     <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
   <PropertyGroup>
-    <RunPostBuildEvent>OnOutputUpdated</RunPostBuildEvent>
+    <RunPostBuildEvent>OnBuildSuccess</RunPostBuildEvent>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <OutputPath>bin\x64\Debug\</OutputPath>
@@ -94,80 +94,13 @@
     <PackageReference Include="System.DirectoryServices" Version="8.0.0" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="8.0.0" />
     <PackageReference Include="System.Drawing.Common" Version="8.0.6" />
+    <!--<PackageReference Include="System.Drawing.Common" Version="8.0.6" /> --> 
   </ItemGroup>
   <PropertyGroup>
-    <PostBuildEvent>@echo off &amp; setLocal EnableDELAYedeXpansion
-      chcp 65001
-
-      set errorCode=0
-
-      set target=$(TargetPath)
-      set project=$(ProjectPath)
-
-      set sdk=%25PROGRAMFILES(x86)%25\Microsoft SDKs\Windows\v8.1A\bin\NETFX 4.5.1 Tools
-      set framework=%25WINDIR%25\Microsoft.NET\Framework\v2.0.50727
-      set inlineILCompiler=$(SolutionDir)Tools\InlineILCompiler\InlineILCompiler\bin\$(ConfigurationName)\InlineILCompiler.exe
-      set cscli=$(SolutionDir)Tools\CSCli\bin\$(ConfigurationName)\CSCli.exe
-
-      IF exist "%25sdk%25\." (
-      echo OK: The Microsoft Windows SDK was found.
-      ) else (
-      echo FAILED: The Microsoft Windows SDK Dir was not found. Check the following path: "%25sdk%25"
-      goto EXIT_ERR
-      )
-      IF exist "%25framework%25\." (
-      echo OK: The .NET Framework Dir was found.
-      ) else (
-      echo FAILED: The Framework-Dir was not found. Check the following path: "%25framework%25"
-      goto EXIT_ERR
-      )
-      IF exist "%25inlineILCompiler%25" (
-      echo OK: Found the inline-il-compiler.
-      ) else (
-      echo FAILED: The inline-il-compiler was not found. Check the following path: "%25inlineILCompiler%25"
-      goto EXIT_ERR
-      )
-      IF exist "%25cscli%25" (
-      echo OK: Found the cscli-compiler.
-      ) else (
-      echo FAILED: The cscli was not found. Check the following path: "%25cscli%25"
-      goto EXIT_ERR
-      )
-
-      if $(ConfigurationName) == Debug (
-      echo Build-Configuration: DEBUG
-      echo    DEBUG=IMPL
-      echo    NO OPTIMIZE
-      set ilasm_args=/DLL /DEBUG=IMPL
-      ) else (
-      if $(ConfigurationName) == Release (
-      echo Build-Configuration: RELEASE
-      echo    NO DEBUG
-      echo    OPTIMIZE
-      set ilasm_args=/DLL /OPTIMIZE
-      ) else (
-      echo FAILED: Invalid Configuration.
-      goto EXIT_ERR
-      )
-      )
-
-      echo.
-      echo.
-      echo Calling the inline-il-compiler ...
-      call "%25inlineILCompiler%25"
-
-      echo.
-      echo.
-      echo Calling CSCli ...
-      call "%25cscli%25" -file:"$(TargetPath)" -r:"RemoveObjAttribute" -c:"CSCalliAttribute"
-
-      :EXIT
-      EXIT /B %25errorCode%25
-
-      :EXIT_ERR
-      set errorCode=-1
-      goto EXIT
-</PostBuildEvent>
+ 
   </PropertyGroup>
   <PropertyGroup />
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="@echo on; &#xD;&#xA;setLocal EnableDELAYedeXpansion&#xD;&#xA;chcp 65001&#xD;&#xA;&#xD;&#xA;set errorCode=0&#xD;&#xA;&#xD;&#xA;set target=$(TargetPath)&#xD;&#xA;echo Targetpath = $(TargetPath)&#xD;&#xA;set project=$(ProjectPath)&#xD;&#xA;echo Projectpath = $(ProjectPath)&#xD;&#xA;     &#xD;&#xA;&#xD;&#xA;set sdk=%25PROGRAMFILES(x86)%25\Microsoft SDKs\Windows\v8.1A\bin\NETFX 4.5.1 Tools&#xD;&#xA;set framework=%25WINDIR%25\Microsoft.NET\Framework\v2.0.50727&#xD;&#xA;set inlineILCompiler=$(SolutionDir)Tools\InlineILCompiler\InlineILCompiler\bin\$(Configuration)\InlineILCompiler.exe&#xD;&#xA;set cscli=$(SolutionDir)Tools\CSCli\bin\$(Configuration)\net8.0\CSCli.exe&#xD;&#xA;&#xD;&#xA;IF exist &quot;%25sdk%25\.&quot; (&#xD;&#xA;  echo OK: The Microsoft Windows SDK was found.&#xD;&#xA;) else (&#xD;&#xA;   echo FAILED: The Microsoft Windows SDK Dir was not found. Check the following path: &quot;%25sdk%25&quot;&#xD;&#xA;   goto EXIT_ERR&#xD;&#xA;)&#xD;&#xA;IF exist &quot;%25framework%25\.&quot; (&#xD;&#xA;  echo OK: The .NET Framework Dir was found.&#xD;&#xA;) else (&#xD;&#xA;    echo FAILED: The Framework-Dir was not found. Check the following path: &quot;%25framework%25&quot;&#xD;&#xA;    goto EXIT_ERR&#xD;&#xA;)&#xD;&#xA;IF exist &quot;%25inlineILCompiler%25&quot; (&#xD;&#xA;  echo OK: Found the inline-il-compiler.&#xD;&#xA;) else (&#xD;&#xA;  echo FAILED: The inline-il-compiler was not found. Check the following path: &quot;%25inlineILCompiler%25&quot;&#xD;&#xA;  goto EXIT_ERR&#xD;&#xA;)&#xD;&#xA;IF exist &quot;%25cscli%25&quot; (&#xD;&#xA;  echo OK: Found the cscli-compiler at &quot;%25cscli%25&quot;&#xD;&#xA;) else (&#xD;&#xA;  echo FAILED: The cscli was not found. Check the following path: &quot;%25cscli%25&quot;&#xD;&#xA;  goto EXIT_ERR&#xD;&#xA;)&#xD;&#xA;&#xD;&#xA;if $(Configuration) == Debug (&#xD;&#xA;  echo Build-Configuration: DEBUG&#xD;&#xA;  echo    DEBUG=IMPL&#xD;&#xA;  echo    NO OPTIMIZE&#xD;&#xA;  set ilasm_args=/DLL /DEBUG=IMPL&#xD;&#xA;) else (&#xD;&#xA;  if $(Configuration) == Release (&#xD;&#xA;    echo Build-Configuration: RELEASE&#xD;&#xA;    echo    NO DEBUG&#xD;&#xA;    echo    OPTIMIZE&#xD;&#xA;    set ilasm_args=/DLL /OPTIMIZE&#xD;&#xA;  ) else (&#xD;&#xA;    echo FAILED: Invalid Configuration.&#xD;&#xA;    goto EXIT_ERR&#xD;&#xA;  ) &#xD;&#xA;)&#xD;&#xA;&#xD;&#xA;echo.&#xD;&#xA;echo.&#xD;&#xA;echo Calling the inline-il-compiler ...&#xD;&#xA;call &quot;%25inlineILCompiler%25&quot;&#xD;&#xA;&#xD;&#xA;echo.&#xD;&#xA;echo.&#xD;&#xA;echo Calling CSCli ...&#xD;&#xA;call &quot;%25cscli%25&quot; -file:&quot;$(TargetPath)&quot; -r:&quot;RemoveObjAttribute&quot; -c:&quot;CSCalliAttribute&quot;&#xD;&#xA;:EXIT&#xD;&#xA;EXIT /B %25errorCode%25&#xD;&#xA;&#xD;&#xA;:EXIT_ERR&#xD;&#xA;set errorCode=-1&#xD;&#xA;goto EXIT" />
+  </Target>
 </Project>
