--- a/Tools/CSCli/CSCli.csproj
+++ b/Tools/CSCli/CSCli.csproj
@@ -13,6 +13,7 @@
     <Copyright>Copyright © Microsoft 2012</Copyright>
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
     <FileVersion>1.0.0.0</FileVersion>
+    <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <OutputPath>bin\x64\Debug\</OutputPath>
